# engine

./: .gitignore  CMakeLists.txt  README.md
main/: .gitignore  CMakeLists.txt  main.cpp  render.hpp  shader.cpp  shader.hpp
main/graphics/: shapes.h
main/routines/: basicLine.cpp  basicLine.hpp  basicRoutine.cpp  basicRoutine.h  basicRoutine.hpp
ng2/: CMakeLists.txt
ng2/collider/: polygon.cpp  polygon.hpp
ng2/collision/: collider.cpp  collider.h  collider.hpp  collision.cpp  collision.h  collision.hpp  material.cpp  material.h  material.hpp  math2d.cpp  math2d.h  math2d.hpp  object.cpp  object.h  object.hpp  polygon.cpp  polygon.h  polygon.hpp  state.h  state.hpp  utils.cpp  utils.h  utils.hpp
ng2/interface/: routines.cpp  routines.h  routines.hpp  scene.cpp  timestepper.cpp  timestepper.h  timestepper.hpp  world.cpp  world.h  world.hpp
ng2/utils/: timer.h  timer.hpp
